--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ PyJWT==2.8.0
 python-dotenv==1.0.0
 
 # File processing dependencies
-pandas==2.1.1
+pandas
 openpyxl==3.1.2
 xlrd==2.0.1
 
@@ -46,3 +46,4 @@ email-validator==2.0.0
 
 # Logging and monitoring
 structlog==23.1.0
+numpy
